--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 altair==4.2.0
+asttokens==2.1.0
 attrs==22.1.0
 autopep8==1.7.0
+backcall==0.2.0
 bcrypt==4.0.1
 blinker==1.5
 cachetools==5.2.0
@@ -11,24 +13,40 @@ colorama==0.4.5
 commonmark==0.9.1
 contourpy==1.0.5
 cycler==0.11.0
+debugpy==1.6.3
 decorator==5.1.1
 entrypoints==0.4
+executing==1.2.0
 extra-streamlit-components==0.1.56
 fonttools==4.37.4
 gitdb==4.0.9
 GitPython==3.1.29
 idna==3.4
 importlib-metadata==5.0.0
+ipykernel==6.17.0
+ipython==8.6.0
+jedi==0.18.1
 Jinja2==3.1.2
 jsonschema==4.16.0
+jupyter_client==7.4.4
+jupyter_core==4.11.2
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
-matplotlib==3.6.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+mpld3==0.5.8
+nest-asyncio==1.5.6
 numpy==1.23.4
 packaging==21.3
 pandas==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
 Pillow==9.2.0
+plotly==5.11.0
+prompt-toolkit==3.0.31
 protobuf==3.20.3
+psutil==5.9.3
+pure-eval==0.2.2
 pyarrow==9.0.0
 pycodestyle==2.9.1
 pydeck==0.8.0b3
@@ -40,21 +58,28 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.4
 pytz-deprecation-shim==0.1.0.post0
+pywin32==304
 PyYAML==6.0
+pyzmq==24.0.1
 requests==2.28.1
 rich==12.6.0
+seaborn==0.12.1
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
+stack-data==0.6.0
 streamlit==1.13.0
 streamlit-authenticator==0.2.1
+tenacity==8.1.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
+traitlets==5.5.0
 typing_extensions==4.4.0
 tzdata==2022.4
 tzlocal==4.2
 urllib3==1.26.12
 validators==0.20.0
 watchdog==2.1.9
+wcwidth==0.2.5
 zipp==3.9.0
